Revert "Fix codeblock bottom spacing"
This reverts commit 03bb2437736f3f70c6f46921c0f0666d0cf7fc3c.

--- a/src/github-markdown-css/github-markdown-light.css
+++ b/src/github-markdown-css/github-markdown-light.css
@@ -567,10 +567,6 @@
   margin-bottom: 16px;
 }
 
-.markdown-body pre {
-  padding-bottom: 16px;
-}
-
 .markdown-body blockquote>:first-child {
   margin-top: 0;
 }
